# musi-metinv-codigo

./: README.md  build_benchs.sh  run_local.sh
inputs/: erat50m.json  fib45.json  generar_matmul.py  generar_qsort.py  mandelbrot.json  matmul1500x1000.json  montecarlo10m.json  nqueens.json  quicksort_25m.json
rust_benchs/: Cargo.toml
rust_benchs/benches/: my_benchmark.rs
rust_benchs/src/: lib.rs  main.rs
web_benchmark/: main.mjs  package.json  server.mjs
web_benchmark/public/: index.html  script.js  tests.json
