[package]
name = "rust_benchs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.2"
serde_json = "1.0.145"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bench]]
name = "my_benchmark"
